refactor(deny-external-users): - change label to state.aaw.statcan.gc.ca/has-sas-notebook-feature - add second check to see if employee is in exception list

--- a/general/deny-external-users/examples/alice/profile.yaml
+++ b/general/deny-external-users/examples/alice/profile.yaml
@@ -2,7 +2,7 @@ apiVersion: kubeflow.org/v1
 kind: Profile
 metadata:
   labels:
-    feature.aaw.statcan.gc.ca/employee-only: "true"
+    state.aaw.statcan.gc.ca/has-sas-notebook-feature: "true"
   name: alice
 spec:
   owner:
