--- a/gatekeeper-opa-sync.yaml
+++ b/gatekeeper-opa-sync.yaml
@@ -12,11 +12,8 @@ spec:
       - group: ""
         version: "v1"
         kind: "Service"
-      - group: "extensions"
-        version: "v1beta1"
-        kind: "Ingress"
       - group: "networking.k8s.io"
-        version: "v1beta1"
+        version: "v1"
         kind: "Ingress"
       - group: "security.istio.io"
         version: "v1beta1"
