--- a/general/deny-external-users/template.yaml
+++ b/general/deny-external-users/template.yaml
@@ -14,11 +14,11 @@ spec:
           properties:
             labels:
               type: array
-              items: 
+              items:
                 type: string
             employeeDomains:
               type: array
-              items: 
+              items:
                 type: string
   targets:
     - target: admission.k8s.gatekeeper.sh
@@ -32,6 +32,8 @@ spec:
           email := obj.subjects[_].name
           contains(email, "@")
           not isEmployee(email)
+          # If the non-employee is in the exception list, then allow
+          count([exceptionCase | exceptionCase := input.parameters.sasNotebookExceptions[_]; exceptionCase == email]) == 0
           ns := obj.metadata.namespace
           profile := data.inventory.cluster["kubeflow.org/v1"]["Profile"][ns]
           profileLabel := input.parameters.labels[_]
@@ -46,6 +48,8 @@ spec:
           email := obj.spec.rules[_]["when"][_]["values"][_]
           contains(email, "@")
           not isEmployee(email)
+          # If the non-employee is in the exception list, then allow
+          count([exceptionCase | exceptionCase := input.parameters.sasNotebookExceptions[_]; exceptionCase == email]) == 0
           ns := obj.metadata.namespace
           profile := data.inventory.cluster["kubeflow.org/v1"]["Profile"][ns]
           profileLabel := input.parameters.labels[_]
