feat(deny-employee-only-features): update labels

--- a/pod-security-policy/deny-employee-only-features/template.yaml
+++ b/pod-security-policy/deny-employee-only-features/template.yaml
@@ -12,17 +12,17 @@ spec:
     - target: admission.k8s.gatekeeper.sh
       rego: |
         package denyemployeeonlyfeatures
-        
+
         # Pod Object
         violation[{"msg": msg}] {
           input.review.object.kind == "Pod"
           ns := input.review.object.metadata.namespace
           profile := data.inventory.cluster["kubeflow.org/v1"]["Profile"][ns]
-          profileLabel :=  profile.metadata.labels["state.aaw.statcan.gc.ca/non-employee-users"]
+          profileLabel :=  profile.metadata.labels["state.aaw.statcan.gc.ca/exists-non-sas-notebook-user"]
           profileLabel == "true"
           container := input.review.object.spec.containers[_]
           startswith(container.image, "k8scc01covidacr.azurecr.io/sas:")
-          msg := sprintf("Pod has state.aaw.statcan.gc.ca/non-employee-users=%v and container uses a SAS image %v", [profileLabel, container.image])
+          msg := sprintf("Pod has state.aaw.statcan.gc.ca/exists-non-sas-notebook-user=%v and container uses a SAS image %v", [profileLabel, container.image])
         }
 
         # Notebook Object
@@ -30,10 +30,10 @@ spec:
           input.review.object.kind == "Notebook"
           ns := input.review.object.metadata.namespace
           profile := data.inventory.cluster["kubeflow.org/v1"]["Profile"][ns]
-          profileLabel :=  profile.metadata.labels["state.aaw.statcan.gc.ca/non-employee-users"]
+          profileLabel :=  profile.metadata.labels["state.aaw.statcan.gc.ca/exists-non-sas-notebook-user"]
           profileLabel == "true"
           container := input.review.object.spec.template.spec.containers[_]
           startswith(container.image, "k8scc01covidacr.azurecr.io/sas:")
-          msg := sprintf("Notebook has state.aaw.statcan.gc.ca/non-employee-users=%v and container uses a SAS image %v", [profileLabel, container.image])
+          msg := sprintf("Notebook has state.aaw.statcan.gc.ca/exists-non-sas-notebook-user=%v and container uses a SAS image %v", [profileLabel, container.image])
         }
 
