feat(deny-external-users): update CRD for DenyExternalUsers

--- a/general/deny-external-users/template.yaml
+++ b/general/deny-external-users/template.yaml
@@ -20,6 +20,10 @@ spec:
               type: array
               items:
                 type: string
+            sasNotebookExceptions:
+              type: array
+              items:
+                type: string
   targets:
     - target: admission.k8s.gatekeeper.sh
       rego: |
