debug(deny-employee-only-features): test if violation gets reached

--- a/pod-security-policy/deny-employee-only-features/template.yaml
+++ b/pod-security-policy/deny-employee-only-features/template.yaml
@@ -16,14 +16,13 @@ spec:
         # Pod Object
         violation[{"msg": msg}] {
           input.review.object.kind == "Pod"
-          # ns := input.review.object.metadata.namespace
-          # profile := data.inventory.cluster["kubeflow.org/v1"]["Profile"][ns]
-          # profileLabel :=  profile.metadata.labels["state.aaw.statcan.gc.ca/exists-non-sas-notebook-user"]
+          ns := input.review.object.metadata.namespace
+          profile := data.inventory.cluster["kubeflow.org/v1"]["Profile"][ns]
+          profileLabel :=  profile.metadata.labels["state.aaw.statcan.gc.ca/exists-non-sas-notebook-user"]
           # profileLabel == "true"
-          # container := input.review.object.spec.containers[_]
+          container := input.review.object.spec.containers[_]
           # startswith(container.image, "k8scc01covidacr.azurecr.io/sas:")
-          # msg := sprintf("Pod has state.aaw.statcan.gc.ca/exists-non-sas-notebook-user=%v and container uses a SAS image %v", [profileLabel, container.image])
-          msg := sprint("Debug: this violation demonstrates this gatekeeper template is being evaluated.")
+          msg := sprintf("Pod has state.aaw.statcan.gc.ca/exists-non-sas-notebook-user=%v and container uses a SAS image %v", [profileLabel, container.image, input.review])
         }
 
         # Notebook Object
