--- a/gatekeeper-opa-sync.yaml
+++ b/gatekeeper-opa-sync.yaml
@@ -11,6 +11,9 @@ spec:
         kind: "Namespace"
       - group: ""
         version: "v1"
+        kind: "Pod"
+      - group: ""
+        version: "v1"
         kind: "Service"
       - group: "networking.k8s.io"
         version: "v1"
