--- a/pod-security-policy/deny-employee-only-features/template.yaml
+++ b/pod-security-policy/deny-employee-only-features/template.yaml
@@ -19,10 +19,10 @@ spec:
           ns := input.review.object.metadata.namespace
           profile := data.inventory.cluster["kubeflow.org/v1"]["Profile"][ns]
           profileLabel :=  profile.metadata.labels["state.aaw.statcan.gc.ca/exists-non-sas-notebook-user"]
-          # profileLabel == "true"
+          profileLabel == "true"
           container := input.review.object.spec.containers[_]
-          # startswith(container.image, "k8scc01covidacr.azurecr.io/sas:")
-          msg := sprintf("Pod has state.aaw.statcan.gc.ca/exists-non-sas-notebook-user=%v and container uses a SAS image %v", [profileLabel, container.image, input.review])
+          startswith(container.image, "k8scc01covidacr.azurecr.io/sas:")
+          msg := sprintf("Pod has state.aaw.statcan.gc.ca/exists-non-sas-notebook-user=%v and container uses a SAS image %v", [profileLabel, container.image])
         }
 
         # Notebook Object
