--- a/pod-security-policy/deny-employee-only-features/template.yaml
+++ b/pod-security-policy/deny-employee-only-features/template.yaml
@@ -18,25 +18,25 @@ spec:
 
         ns := input.review.object.metadata.namespace
         profile := data.inventory.cluster["kubeflow.org/v1"]["Profile"][ns]
-        profileLabel :=  profile.metadata.labels[sasLabel]
+        profileLabelValue :=  profile.metadata.labels[sasLabel]
 
         # Pod Object
         violation[{"msg": msg}] {
             input.review.object.kind == "Pod"
             container := input.review.object.spec.containers[_]
-            existsSasContainerAndLabelViolation(container, profileLabel)
-            msg := sprintf("Pod has state.aaw.statcan.gc.ca/exists-non-sas-notebook-user=%v and container uses a SAS image %v", [profileLabel, container.image])
+            existsSasContainerAndLabelViolation(container, profileLabelValue)
+            msg := sprintf("Pod has state.aaw.statcan.gc.ca/exists-non-sas-notebook-user=%v and container uses a SAS image %v", [profileLabelValue, container.image])
         }
 
         # Notebook Object
         violation[{"msg": msg}] {
             input.review.object.kind == "Notebook"
             container := input.review.object.spec.template.spec.containers[_]
-            existsSasContainerAndLabelViolation(container, profileLabel)
-            msg := sprintf("Notebook has state.aaw.statcan.gc.ca/exists-non-sas-notebook-user=%v and container uses a SAS image %v", [profileLabel, container.image])
+            existsSasContainerAndLabelViolation(container, profileLabelValue)
+            msg := sprintf("Notebook has state.aaw.statcan.gc.ca/exists-non-sas-notebook-user=%v and container uses a SAS image %v", [profileLabelValue, container.image])
         }
 
-        existsSasContainerAndLabelViolation(container, profileLabel) {
-            profileLabel == "true"
+        existsSasContainerAndLabelViolation(container, profileLabelValue) {
+            profileLabelValue == "true"
             startswith(container.image, sasImagePrefix)
         }
