--- a/pod-security-policy/deny-employee-only-features/template.yaml
+++ b/pod-security-policy/deny-employee-only-features/template.yaml
@@ -12,28 +12,31 @@ spec:
     - target: admission.k8s.gatekeeper.sh
       rego: |
         package denyemployeeonlyfeatures
-        
+
+        sasLabel := "state.aaw.statcan.gc.ca/exists-non-sas-notebook-user"
+        sasImagePrefix := "k8scc01covidacr.azurecr.io/sas:"
+
+        ns := input.review.object.metadata.namespace
+        profile := data.inventory.cluster["kubeflow.org/v1"]["Profile"][ns]
+        profileLabelValue :=  profile.metadata.labels[sasLabel]
+
         # Pod Object
         violation[{"msg": msg}] {
-          input.review.object.kind == "Pod"
-          ns := input.review.object.metadata.namespace
-          profile := data.inventory.cluster["kubeflow.org/v1"]["Profile"][ns]
-          profileLabel :=  profile.metadata.labels["state.aaw.statcan.gc.ca/non-employee-users"]
-          profileLabel == "true"
-          container := input.review.object.spec.containers[_]
-          startswith(container.image, "k8scc01covidacr.azurecr.io/sas:")
-          msg := sprintf("Pod has state.aaw.statcan.gc.ca/non-employee-users=%v and container uses a SAS image %v", [profileLabel, container.image])
+            input.review.object.kind == "Pod"
+            container := input.review.object.spec.containers[_]
+            existsSasContainerAndLabelViolation(container, profileLabelValue)
+            msg := sprintf("Pod has %s=%v and container uses a SAS image %v", [sasLabel, profileLabelValue, container.image])
         }
 
         # Notebook Object
         violation[{"msg": msg}] {
-          input.review.object.kind == "Notebook"
-          ns := input.review.object.metadata.namespace
-          profile := data.inventory.cluster["kubeflow.org/v1"]["Profile"][ns]
-          profileLabel :=  profile.metadata.labels["state.aaw.statcan.gc.ca/non-employee-users"]
-          profileLabel == "true"
-          container := input.review.object.spec.template.spec.containers[_]
-          startswith(container.image, "k8scc01covidacr.azurecr.io/sas:")
-          msg := sprintf("Notebook has state.aaw.statcan.gc.ca/non-employee-users=%v and container uses a SAS image %v", [profileLabel, container.image])
+            input.review.object.kind == "Notebook"
+            container := input.review.object.spec.template.spec.containers[_]
+            existsSasContainerAndLabelViolation(container, profileLabelValue)
+            msg := sprintf("Notebook has %s=%v and container uses a SAS image %v", [sasLabel, profileLabelValue, container.image])
         }
 
+        existsSasContainerAndLabelViolation(container, profileLabelValue) {
+            profileLabelValue == "true"
+            startswith(container.image, sasImagePrefix)
+        }
