--- a/pod-security-policy/metadata-restrictions/template.yaml
+++ b/pod-security-policy/metadata-restrictions/template.yaml
@@ -26,6 +26,10 @@ spec:
                     type: array
                     items:
                       type: string
+                  allowedRegex:
+                    type: array
+                    items:
+                      type: string
             labels:
               type: array
               items:
@@ -38,6 +42,10 @@ spec:
                   immutable:
                     type: boolean
                   allowedValues:
+                    type: array
+                    items:
+                      type: string
+                  allowedRegex:
                     type: array
                     items:
                       type: string
@@ -55,6 +63,7 @@ spec:
           restriction := input.parameters[kind][_]
           input.review.object.metadata[kind][restriction.key]
           count(restriction.allowedValues) == 0
+          count(restriction.allowedRegex) == 0
           msg := sprintf("%s %q not allowed", [kind, restriction.key])
         }
 
@@ -63,10 +72,22 @@ spec:
           restriction := input.parameters[kind][_]
           restriction.key == key
           count(restriction.allowedValues) > 0
-          found := [found | found = restriction.allowedValues[_] == val]
+          found := [found | found = restriction.allowedValues[_] == val] #
           not any(found)
 
           msg := sprintf("%s %q value %q not allowed, allowed values: %v", [kind, key, val, restriction.allowedValues])
+        }
+
+        # Allowed values specifically for regex
+        violation[{"msg": msg}] {
+          val := input.review.object.metadata[kind][key]
+          restriction := input.parameters[kind][_]
+          restriction.key == key
+          count(restriction.allowedRegex) > 0
+          found := [found | found = regex.match(restriction.allowedRegex[regex], val)]
+          not any(found)
+  
+          msg := sprintf("%s %q value %q not allowed, allowed regex: %v", [kind, key, val, restriction.allowedRegex])
         }
 
         # Immutability
@@ -82,3 +103,4 @@ spec:
 
           msg := sprintf("label %q is immutable: %q -> %q not permitted", [restriction.key, oldval, newval])
         }
+
