feat: add additional test case

--- a/pod-security-policy/metadata-restrictions/template.yaml
+++ b/pod-security-policy/metadata-restrictions/template.yaml
@@ -10,7 +10,7 @@ spec:
       validation:
         openAPIV3Schema:
           type: object
-          properties:
+          properties: 
             annotations:
               type: array
               items:
@@ -71,23 +71,12 @@ spec:
           val := input.review.object.metadata[kind][key]
           restriction := input.parameters[kind][_]
           restriction.key == key
-          count(restriction.allowedValues) > 0
-          found := [found | found = restriction.allowedValues[_] == val] #
-          not any(found)
+          count(array.concat(restriction.allowedValues,restriction.allowedRegex)) > 0
+          foundValues := [foundValues | foundValues = restriction.allowedValues[_] == val] #
+          foundRegex := [foundRegex | foundRegex = regex.match(restriction.allowedRegex[regex], val)]
+          not any(array.concat(foundValues,foundRegex))
 
-          msg := sprintf("%s %q value %q not allowed, allowed values: %v", [kind, key, val, restriction.allowedValues])
-        }
-
-        # Allowed values specifically for regex
-        violation[{"msg": msg}] {
-          val := input.review.object.metadata[kind][key]
-          restriction := input.parameters[kind][_]
-          restriction.key == key
-          count(restriction.allowedRegex) > 0
-          found := [found | found = regex.match(restriction.allowedRegex[regex], val)]
-          not any(found)
-  
-          msg := sprintf("%s %q value %q not allowed, allowed regex: %v", [kind, key, val, restriction.allowedRegex])
+          msg := sprintf("%s %q value %q not allowed, allowed values/regex: %v", [kind, key, val, array.concat(restriction.allowedValues,restriction.allowedRegex)])
         }
 
         # Immutability
