docs(readme/testing): add description of tests and how to take advantage of them.

--- a/general/deny-external-users/template.yaml
+++ b/general/deny-external-users/template.yaml
@@ -26,7 +26,7 @@ spec:
                 type: string
   targets:
     - target: admission.k8s.gatekeeper.sh
-      rego: |
+      rego: |-
         package denyexternalusers
 
         obj := input.review.object
@@ -54,7 +54,6 @@ spec:
 
         profileLabelViolationConditionIsTrue(profile, profileLabel) {
             profile.metadata.labels[profileLabel] == "true"
-
         }
 
         isEmployeeOrDeemedEmployee(email) {
