fix(workflow-gc): set name to the lowercase of CRD's Kind

--- a/general/argo-workflow-gc/template.yaml
+++ b/general/argo-workflow-gc/template.yaml
@@ -1,7 +1,7 @@
 apiVersion: templates.gatekeeper.sh/v1beta1
 kind: ConstraintTemplate
 metadata:
-  name: argo-workflow-enforce-podgc-field
+  name: enforceargoworkflowgc
 spec:
   crd:
     spec:
