--- a/general/argo-workflow-gc/examples/constraint.yaml
+++ b/general/argo-workflow-gc/examples/constraint.yaml
@@ -1,7 +1,7 @@
 apiVersion: constraints.gatekeeper.sh/v1beta1
-kind: RestrictHostnames
+kind: EnforceArgoWorkflowGC
 metadata:
-  name: EnforceArgoWorkflowGC
+  name: enforce-argo-workflow-gc
 spec:
   match:
     kinds:
