--- a/general/restrict-priority-classes/template.yaml
+++ b/general/restrict-priority-classes/template.yaml
@@ -32,5 +32,5 @@ spec:
         	# If empty, is in violation.
         	priority_class_names & {priority_class_name} == set()
 
-        	msg := sprintf("pod %s is using an unapproved priority class %q. Available prority classes are %v.", [input.review.object.metadata.name, priority_class_name, priority_class_names])
+        	msg := sprintf("pod %s is using an unapproved priority class %q. Available priority classes are %v.", [input.review.object.metadata.name, priority_class_name, priority_class_names])
         }
