doc: add extra comments.

--- a/general/restrict-priority-classes/template.yaml
+++ b/general/restrict-priority-classes/template.yaml
@@ -20,6 +20,8 @@ spec:
   targets:
     - target: admission.k8s.gatekeeper.sh
       rego: |-
+        # This policy restricts the priority classes that
+        # can be used by Pods.
         package restrictpriorityclasses
 
         # Create a set of the priority class names
